# HomeWork

./: .gitignore
CurceWork/CruseWork/: CruseWork.sln
CurceWork/CruseWork/DinamicLib/: DinamicLib.vcxproj  DinamicLib.vcxproj.filters  dinam_lib_Race.cpp  dinam_lib_Race.h
CurceWork/CruseWork/Race/: Race.cpp  Race.vcxproj
Lasson 3/Task 1/HomeWork3_1/: HomeWork3_1.cpp  HomeWork3_1.sln  HomeWork3_1.vcxproj  HomeWork3_1.vcxproj.filters
Lasson 3/Task 2/HomeWork3_2/: HomeWork3_2.cpp  HomeWork3_2.sln  HomeWork3_2.vcxproj  HomeWork3_2.vcxproj.filters
Lesson 10/Task 1/my_first_cmake_project/: CMakeLIsts.txt  my_first_cmake_project.cpp  my_first_cmake_project.sln  my_first_cmake_project.vcxproj
Lesson 10/Task 2/HomeWork10_2/: CMakeLists.txt  HomeWork10_2.cpp  HomeWork10_2.sln  HomeWork10_2.vcxproj  HomeWork10_2.vcxproj.filters  Quadrangle.h  Quadrangle_A.cpp  Quadrangle_Romb.cpp  Triangle.h
Lesson 11/Task 1/HomeWork11_1/: HomeWork11_1.cpp  HomeWork11_1.sln  HomeWork11_1.vcxproj
Lesson 11/Task 1/StaticLib/: StaticLIb.h  StaticLib.sln  StaticLib.vcxproj  StaticLib.vcxproj.filters
Lesson 11/Task 2/HomeWork11_2/: HomeWork11_2.sln
Lesson 11/Task 3/HomeWork113/: CMakeLists.txt  HomeWork11_3.cpp  HomeWork11_3.sln  HomeWork11_3.vcxproj  HomeWork11_3.vcxproj.filters  Leaver.h
Lesson 2/Task 1/HomeWork2_1/: HomeWork2_1.sln
Lesson 2/Task 2/HomeWork2_2/: HomeWork2_2.sln
Lesson 2/Task 3/HoneWork2_3/: HoneWork2_3.sln
Lesson 4/Task 1/HomeWork4_1/: HomeWork4_1.cpp  HomeWork4_1.sln  out.txt  (+2 more)
ProdProg/HomeWork2_1/: HomeWork2_1.cpp  HomeWork2_1.sln  HomeWork2_1.vcxproj
(+124 files in other folders)
