cmake_minimum_required(VERSION 3.22.0)
project(HomeWork10_02)

set (SOURCES 
HomeWork10_2.cpp Figure.cpp print_info.cpp Quadrangle.cpp Quadrangle_A.cpp 
Quadrangle_AB.cpp Quadrangle_ab_AB.cpp Quadrangle_Romb.cpp Triangle.cpp 
Triangle_90.cpp Triangle_AB.cpp Triangle_ABC.cpp)


add_executable(HomeWork10_02 ${SOURCES})